Minor fix to error ux scrolling/overflow

--- a/src/client/assets/styles/error.scss
+++ b/src/client/assets/styles/error.scss
@@ -43,6 +43,9 @@
 		width: 100%;
 		color: black;
 		overflow-y: auto;
+		-webkit-flex: 1 1 100%;
+			-ms-flex: 1 1 100%;
+				flex: 1 1 100%;
 
 		pre {
 			background: #eee;
